builder/tests/08-unrecognized-attribute.stderr
error: unknown attr 'eac' was given
       consider writing `each = "..."`
  --> tests/08-unrecognized-attribute.rs:22:15
   |
22 |     #[builder(eac = "arg")]
   |               ^^^^^^^^^^^
